--- a/composer.json
+++ b/composer.json
@@ -4,12 +4,11 @@
   "license": "BSD-3-Clause",
   "homepage": "https://github.com/andreaskoch/dockerized-magento",
   "require": {
-    "aoepeople/aoe_scheduler": "v0.4.3",
-    "aschroder/smtp_pro": "v2.0.5",
-    "gordonlesti/lesti_fpc": "1.3.6",
     "jeroenvermeulen/solarium": "v1.6.9-beta",
-    "magento-hackathon/magento-composer-installer": "v2.1.1",
-    "magento/core": "1.9.1.0-patch1"
+    "gordonlesti/lesti_fpc": "1.3.6",
+    "aschroder/smtp_pro": "v2.0.5",
+    "aoepeople/aoe_scheduler": "v0.4.3",
+    "magento/core": "1.9.2.4"
   },
   "require-dev": {
     "aoepeople/aoe_profiler": "v0.3.0",
